objects/RR_Team__c.object
<CustomObject>
    <description>Team for Round Robin Assignment</description>
    <fields>
        <fullName>Assignee_Number_Hot__c</fullName>
        <formula>MOD(  Number_of_Prospects_Assigned_Hot__c , Member_Count__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Number - Hot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee_Number__c</fullName>
        <formula>MOD( Number_of_Prospects_Assigned__c , Member_Count__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <label>Member Count</label>
        <summaryFilterItems>
            <field>RR_Team_Member__c.Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RR_Team_Member__c.RR_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospects_Assigned_Hot__c</fullName>
        <label>Number of Prospects Assigned - Hot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospects_Assigned__c</fullName>
        <description>The number of Prospects assigned to this team since the last time the count was reset.  Used in a formula to determine Assignee</description>
        <label>Number of Prospects Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Lookup_Field__c</fullName>
        <inlineHelpText>Populate this field if the prospect should be assigned based on one of these user lookup fields first</inlineHelpText>
        <label>User Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Journey Engagement Rep</fullName>
                </value>
                <value>
                    <fullName>Journey Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RR Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RR Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>